--- a/_/package.json
+++ b/_/package.json
@@ -4,7 +4,7 @@
   "description": "web scraper for sirikanya",
   "main": "index.js",
   "scripts": {
-    "post" : "babel-node post.js",
+    "post": "babel-node post.js",
     "start": "babel-node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -20,6 +20,7 @@
     "cheerio": "^1.0.0-rc.12",
     "geocoder": "^0.2.3",
     "puppeteer": "^17.1.3",
+    "slugify": "^1.6.5",
     "xml-js": "^1.6.11"
   },
   "devDependencies": {
